--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     t.src=v;s=b.getElementsByTagName(e)[0];
     s.parentNode.insertBefore(t,s)}(window, document,'script',
     'https://connect.facebook.net/en_US/fbevents.js');
-    
+
     fbq('init', '1946841772846486');
     fbq('track', 'PageView');
   </script>
@@ -50,7 +50,7 @@
     <button class="popup-button" id="whatsappButton">
       <span>CREÁ TU USUARIO</span>
       <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="white" viewBox="0 0 24 24">
-        <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.149-.67.149-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.074-.297-.149-1.255-.462-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.297-.347.446-.521.151-.172.2-.296.3-.495.099-.198.05-.372-.025-.521-.075-.148-.669-1.611-.916-2.206-.242-.579-.487-.501-.669-.51l-.57-.01c-.198 0-.52.074-.792.372s-1.04 1.016-1.04 2.479 1.065 2.876 1.213 3.074c.149.198 2.095 3.2 5.076 4.487.709.306 1.263.489 1.694.626.712.226 1.36.194 1.872.118.571-.085 1.758-.719 2.006-1.413.248-.695.248-1.29.173-1.414-.074-.123-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.48-4.437 9.884-9.885 9.884"/>
+        <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.149-.67.149-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.074-.297-.149-1.255-.462-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.297-.347.446-.521.151-.172.2-.296.3-.495.099-.198.05-.372-.025-.521-.075-.148-.669-1.611-.916-2.206-.242-.579-.487-.501-.669-.51l-.57-.01c-.198 0-.52.074-.792.372s-1.04 1.016-1.04 2.479 1.065 2.876 1.213 3.074c.149.198 2.095 3.2 5.076 4.487.709.306 1.263.489 1.694.626.712.226 1.36.194 1.872.118.571-.085 1.758-.719 2.006-1.413.248-.695.248-1.29.173-1.414-.074-.123-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413Z"/>
       </svg>
     </button>
   </div>
@@ -88,13 +88,12 @@
     </div>
   </div>
 
-  <!-- SCRIPT ANTI-SPAM FINAL Y OPTIMIZADO -->
+  <!-- SCRIPT OPTIMIZADO: ANTI-SPAM + BEACON + 0 LAG -->
   <script>
     const WHATSAPP_NUMBER = "5492236735372";
     const SHEET_URL = "https://script.google.com/macros/s/AKfycbwyADs1Mu32qEnFhwV4ySNK6Uaa3WzaCkDU_o3xFnhgMvXxvZcE3Pps6EGRguwyFhqq/exec";
-    const CLICK_ID_LIFETIME_MS = 5 * 60 * 1000;
 
-    let clickLocked = false;
+    let btn;
 
     function getCookie(name) {
       const match = document.cookie.match(new RegExp("(^| )" + name + "=([^;]+)"));
@@ -109,66 +108,62 @@
     }
 
     function getOrCreateClickID() {
-      const stored = sessionStorage.getItem("click_info");
-      const now = Date.now();
-      if (stored) {
-        try {
-          const parsed = JSON.parse(stored);
-          if (now - parsed.timestamp < CLICK_ID_LIFETIME_MS) {
-            return parsed.click_id;
-          }
-        } catch {}
+      const stored = localStorage.getItem("click_id");
+      if (stored) return stored;
+      const id = generateShortID();
+      localStorage.setItem("click_id", id);
+      return id;
+    }
+
+    function safeSend(payload) {
+      try {
+        navigator.sendBeacon(SHEET_URL, JSON.stringify(payload));
+      } catch (e) {
+        fetch(SHEET_URL, {
+          method: "POST",
+          mode: "no-cors",
+          headers: { "Content-Type": "text/plain;charset=UTF-8" },
+          body: JSON.stringify(payload)
+        });
       }
-      const newClick = { click_id: generateShortID(), timestamp: now };
-      sessionStorage.setItem("click_info", JSON.stringify(newClick));
-      return newClick.click_id;
     }
 
     async function handleWhatsAppClick(event) {
       event?.preventDefault?.();
 
-      if (clickLocked) return;
-      clickLocked = true;
+      if (btn.disabled) return;
 
-      const btn = document.getElementById("whatsappButton");
-      const originalText = btn.querySelector("span").textContent;
-      btn.querySelector("span").textContent = "CARGANDO...";
       btn.disabled = true;
+      btn.querySelector("span").textContent = "CARGANDO...";
 
-      const fbp = getCookie("_fbp");
+      const fbp = getCookie("_fbp") || "";
       const fbc = getCookie("_fbc") ||
-        (window.location.search.match(/fbclid=([^&]+)/) ? "fb.1." + Date.now() + "." + RegExp.$1 : "");
+        (window.location.search.match(/fbclid=([^&]+)/)
+          ? "fb.1." + Date.now() + "." + RegExp.$1
+          : "");
 
       const click_id = getOrCreateClickID();
       const event_id = "contact-" + click_id;
       const timestamp = new Date().toISOString();
 
       if (typeof fbq !== "undefined") {
-        try { fbq("track", "Contact", {}, { eventID: event_id }); } catch(e) {}
+        fbq("track", "Contact", {}, { eventID: event_id });
       }
 
-      try {
-        await fetch(SHEET_URL, {
-          method: "POST",
-          mode: "no-cors",
-          headers: { "Content-Type": "text/plain;charset=UTF-8" },
-          body: JSON.stringify({ click_id, fbp, fbc, event_id, timestamp })
-        });
-      } catch (err) {
-        console.warn("Error en fetch:", err);
-        clickLocked = false;
-        btn.disabled = false;
-        btn.querySelector("span").textContent = originalText;
-        return;
-      }
+      safeSend({ click_id, fbp, fbc, event_id, timestamp });
 
       const message = `Hola, quiero registrarme. Mi código es ${click_id}`;
       window.open(`https://wa.me/${WHATSAPP_NUMBER}?text=${encodeURIComponent(message)}`, "_blank");
+
+      setTimeout(() => {
+        btn.disabled = false;
+        btn.querySelector("span").textContent = "CREÁ TU USUARIO";
+      }, 4000);
     }
 
     document.addEventListener("DOMContentLoaded", () => {
-      const btn = document.getElementById("whatsappButton");
-      if (btn) btn.addEventListener("click", handleWhatsAppClick);
+      btn = document.getElementById("whatsappButton");
+      btn.addEventListener("click", handleWhatsAppClick);
     });
   </script>
 
