--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- TÍTULO BLANQUEADO -->
-  <title>💎 Circo Online</title>
+  <title>💎 Imperio Esmeralda</title>
 
   <!-- META VERIFICACIÓN -->
   <meta name="facebook-domain-verification" content="o1hoq82czvz17489kpf7eb2sqc8ta1" />
@@ -94,7 +94,7 @@
   <!-- INFO EXTERNA (BLANQUEADA) -->
   <div class="info-externa" style="background: rgba(0, 0, 0, 0.7); backdrop-filter: blur(10px); border: 1px solid rgba(255, 255, 255, 0.2);">
     <p id="minimoDeposito" style="color: #00ff88;">Acceso desde: $1000</p>
-    <p>EXPERIENCIA PREMIUM • CONTENIDO EXCLUSIVO • DISPONIBLE 24/7</p>
+    <p>EXPERIENCIA PREMIUM • ATENCIÓN 24/7 • ACCESO INMEDIATO Y SEGURO</p>
   </div>
 
   <!-- MÉTODOS DE PAGO (SIN CAMBIOS) -->
@@ -207,3 +207,4 @@
 
 </body>
 </html>
+
