--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <h1 class="logo-text" id="logoContainer" style="visibility: visible;">
     <span class="logo-emoji">💎</span>
     <span class="logo-text-fill" style="color: #00ff88; text-shadow: 0 0 20px rgba(0, 255, 136, 0.5);">
-      CIRCO ONLINE
+      IMPERIO ESMERALDA
     </span>
   </h1>
 
@@ -207,4 +207,5 @@
 
 </body>
 </html>
+
 
