--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
   <!-- INFO EXTERNA (BLANQUEADA) -->
   <div class="info-externa" style="background: rgba(0, 0, 0, 0.7); backdrop-filter: blur(10px); border: 1px solid rgba(255, 255, 255, 0.2);">
-    <p id="minimoDeposito" style="color: #00ff88;">Acceso desde: $1000</p>
+    <p id="minimoDeposito" style="color: #00ff88;"></p>
     <p>EXPERIENCIA PREMIUM • ATENCIÓN 24/7 • ACCESO INMEDIATO Y SEGURO</p>
   </div>
 
@@ -187,3 +187,4 @@
 
 </body>
 </html>
+
