--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
       safeSend({ click_id, fbp, fbc, event_id, timestamp });
 
-      const message = `Hola! 👋 Quiero cargar con el 20% extra. (Ref: ${click_id})`;
+      const message = `Hola! Quiero cargar con el 20% extra. (Ref: ${click_id})`;
       window.open(`https://wa.me/${WHATSAPP_NUMBER}?text=${encodeURIComponent(message)}`, "_blank");
 
       setTimeout(() => {
@@ -187,6 +187,7 @@
 
 </body>
 </html>
+
 
 
 
