--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   </div>
 
   <script>
-    const WHATSAPP_NUMBER = "5492235177406";
+    const WHATSAPP_NUMBER = "5492235177415";
     const SHEET_URL = "https://script.google.com/macros/s/AKfycbwyADs1Mu32qEnFhwV4ySNK6Uaa3WzaCkDU_o3xFnhgMvXxvZcE3Pps6EGRguwyFhqq/exec";
 
     let btn;
@@ -164,7 +164,7 @@
       safeSend({ click_id, fbp, fbc, event_id, timestamp, ad_name, campaign_name });
 
       // 3. MENSAJE DE WHATSAPP (Sin emoji, directo)
-      const message = `Hola! Quiero mi 30% extra. (Código: ${click_id})`;
+      const message = `Hola! Quiero mi 30% extra. (Cód: ${click_id})`;
       window.open(`https://wa.me/${WHATSAPP_NUMBER}?text=${encodeURIComponent(message)}`, "_blank");
 
       setTimeout(() => {
@@ -181,6 +181,7 @@
 
 </body>
 </html>
+
 
 
 
