--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
     // Agrega aquí todos los números que quieras. El sistema elegirá uno al azar en cada clic.
     const WHATSAPP_ROTATOR = [
       "5492235482161",  // Número 1
-      "5492235177457",  // Número 2
+      "5492235177457",  // Número 2 (Cámbialo por el real)
+      "5492235342762"   // Número 3 (Cámbialo por el real)
     ];
 
     const SHEET_URL = "https://script.google.com/macros/s/AKfycbw9cPNvu9LoUam2EUVzkTFz8P41-qtjiwHTLEvkh9obDU5D2IcNif1Ep4ZjgMZ7CBBG/exec";
