--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
       "5492235568815",  // Número 1
       "5492235867115",  // Número 2 (Cámbialo por el real)
       "5492235575929"   // Número 3 (Cámbialo por el real)
-      "5492236797994"   // Número 3 (Cámbialo por el real)
+      "5492236797994"   // Número 4 (Cámbialo por el real)
+      "5492235177457",  // Número J (Cámbialo por el real)
+      "5492235342762"   // Número R (Cámbialo por el real)
     ];
 
     const SHEET_URL = "https://script.google.com/macros/s/AKfycbw9cPNvu9LoUam2EUVzkTFz8P41-qtjiwHTLEvkh9obDU5D2IcNif1Ep4ZjgMZ7CBBG/exec";
@@ -193,4 +195,5 @@
 
 </body>
 </html>
+
 
